Fix some spacing issues to align texts with each other

--- a/style.css
+++ b/style.css
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   background: #1F2937;
-  margin: -10px -10px 0px -10px;
-  height: 400px;
+  margin: -10px -10px 0 -10px;
+  padding: 48px;
 }
 
 .header {
   display: flex;
   align-items: center;
-  margin-bottom: 48px;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin-bottom: 32px;
 }
 
 .logo {
@@ -42,15 +42,14 @@ a {
 .subsection {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  margin: 0 48px;
+  justify-content: space-between;
 }
 
 .left-side {
   display: flex;
   flex-flow: column wrap;
-  width: 400px;
-  gap: 8px;
+  width: 800px;
+  gap: 16px;
 }
 
 button {
